[gd_scene load_steps=10 format=2]

[ext_resource path="res://BattleFields/BaseBattleField.tscn" type="PackedScene" id=1]
[ext_resource path="res://BattleFields/Enemy/JankenBattleField.gd" type="Script" id=2]
[ext_resource path="res://Images/BattleFields/JanKenPon/sword_button.png" type="Texture" id=3]
[ext_resource path="res://Images/BattleFields/JanKenPon/question_button.png" type="Texture" id=4]
[ext_resource path="res://Images/BattleFields/JanKenPon/paper_button.png" type="Texture" id=5]
[ext_resource path="res://Images/BattleFields/JanKenPon/shield_button.png" type="Texture" id=6]
[ext_resource path="res://Music/SFX/win_1.wav" type="AudioStream" id=7]
[ext_resource path="res://Music/SFX/error_1.wav" type="AudioStream" id=8]
[ext_resource path="res://Music/SFX/draw_1.wav" type="AudioStream" id=9]



[node name="JankenBattleField" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Field" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 72.0
margin_bottom = 60.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyChoice" type="CenterContainer" parent="Field/VBoxContainer" index="0"]
margin_right = 72.0
margin_bottom = 30.0
size_flags_vertical = 3

[node name="Sprite" type="TextureRect" parent="Field/VBoxContainer/EnemyChoice" index="0"]
margin_left = 27.0
margin_top = 6.0
margin_right = 45.0
margin_bottom = 24.0
texture = ExtResource( 4 )

[node name="Outcome" type="CenterContainer" parent="Field/VBoxContainer" index="1"]
visible = false
margin_left = 16.0
margin_top = 24.0
margin_right = 55.0
margin_bottom = 36.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Text" type="Label" parent="Field/VBoxContainer/Outcome" index="0"]
margin_right = 39.0
margin_bottom = 12.0
text = "YOU WIN"

[node name="PlayerChoice" type="CenterContainer" parent="Field/VBoxContainer" index="2"]
visible = false
margin_top = 30.0
margin_right = 72.0
margin_bottom = 60.0
size_flags_vertical = 3

[node name="Sprite" type="TextureRect" parent="Field/VBoxContainer/PlayerChoice" index="0"]
margin_left = 27.0
margin_top = 6.0
margin_right = 45.0
margin_bottom = 24.0
texture = ExtResource( 4 )

[node name="PlayerOptions" type="HBoxContainer" parent="Field/VBoxContainer" index="3"]
margin_top = 30.0
margin_right = 72.0
margin_bottom = 60.0
size_flags_vertical = 3
custom_constants/separation = 3
alignment = 1

[node name="ScissorButton" type="TextureButton" parent="Field/VBoxContainer/PlayerOptions" index="0"]
margin_left = 6.0
margin_top = 6.0
margin_right = 24.0
margin_bottom = 24.0
size_flags_vertical = 4
texture_normal = ExtResource( 3 )

[node name="RockButton" type="TextureButton" parent="Field/VBoxContainer/PlayerOptions" index="1"]
margin_left = 27.0
margin_top = 6.0
margin_right = 45.0
margin_bottom = 24.0
size_flags_vertical = 4
texture_normal = ExtResource( 6 )

[node name="PaperButton" type="TextureButton" parent="Field/VBoxContainer/PlayerOptions" index="2"]
margin_left = 48.0
margin_top = 6.0
margin_right = 66.0
margin_bottom = 24.0
size_flags_vertical = 4
texture_normal = ExtResource( 5 )

[node name="SFXWin" type="AudioStreamPlayer" parent="." index="3"]
stream = ExtResource( 7 )

[node name="SFXLose" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource( 8 )

[node name="SFXDraw" type="AudioStreamPlayer" parent="." index="5"]
stream = ExtResource( 9 )

[node name="ShowOutcomeTimer" type="Timer" parent="." index="6"]
wait_time = 0.5
one_shot = true
